# xoflib

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  speed_test.py  xof.pyi  xof_py.pyi  xoflib.pyi
.github/workflows/: CI.yml
benchmarks/: benchmark_xof.py  shake_wrapper.py
docs/: api.rst  conf.py  index.rst  readme.md  xof.rst  xof_py.rst  xoflib.rst
docs/_static/css/: custom.css
src/: lib.rs
tests/: speed_test.py  test_ascon.py  test_blake3.py  test_shake.py  test_shake_wrapper.py  test_turbo_shake.py  test_turbo_shake_data.py  test_xof.py  test_xoflib.py  utilities.py
tests/assets/: LWC_HASH_KAT_256_AsconA_Xof.json  LWC_HASH_KAT_256_Ascon_Xof.json
tests/assets/blake3/: test_vectors.json
