[package]
name = "xoflib"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xoflib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
sha3 = { version = "0.10.8", features = ["asm"] }
ascon-hash = "0.2.0"
blake3 = { version = "1.5.3", features = ["traits-preview"] }
