[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "xoflib"
requires-python = ">=3.9"
description = "A package for the Shake and Ascon extendable-output functions (XOFs)"
readme = "README.md"
classifiers = [
    "Topic :: Security :: Cryptography",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/GiacomoPope/xoflib"
Issues = "https://github.com/GiacomoPope/xoflib/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-include = ["LICENSE", "README.md"]
